# demo-python

./: .env.example  .gitignore  AGENTS.md  README.md  log.mdc  pyproject.toml
app/: __init__.py  config.py  database.py  debug_request_logging.py  env_bootstrap.py  main.py  paths.py  repo.py  verstka_handlers.py  verstka_storage.py
app/routers/: cms.py
app/services/: publish.py  render.py
app/static/verstka-viewer/: index.js
app/templates/: article.html.j2
app/templates/cms/: articles.html.j2  bootstrap_done.html.j2  bootstrap_login.html.j2  editor_error.html.j2  login.html.j2  users.html.j2
confs/: russian.conf
scripts/: build_verstka_viewer_dist.py
staff/: demo-cms.service.example  nginx.conf
tests/: test_article_rendering.py  test_cms_editor_open.py
