[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "demo-verstka-cms"
version = "0.1.0"
description = "Minimal CMS with Verstka editor, SQLite, static nginx publishing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.0.0",
    "argon2-cffi>=23.1.0",
    "httpx>=0.27.0",
    "verstka-sdk[fastapi]>=0.1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]

[tool.ruff]
line-length = 100
target-version = "py310"
